--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:21.0'
+    
+    compile "org.jsoup:jsoup:1.10.3"
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
